--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-backend/node_modules
+# Ignore node_modules directories
+backend/node_modules/
+frontend/node_modules/
+
+# Ignore environment variable files
 backend/.env
-frontend/node_modules
